[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/ai_assist/core/ais/image/chatgpt_request.gd" type="Script" id=1]
[ext_resource path="res://addons/ai_assist/ui/debugger/analysis/analyze.gd" type="Script" id=2]

[node name="Analyze" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="ChatGPTRequest" type="HTTPRequest" parent="."]
use_threads = true
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
text = "File Analysis"
__meta__ = {
"_edit_lock_": true
}

[node name="AnalyzeDialog" type="WindowDialog" parent="."]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -384.0
margin_top = -225.0
margin_right = 384.0
margin_bottom = 225.0
window_title = "File Analysis"
__meta__ = {
"_editor_description_": ""
}

[node name="MarginContainer" type="MarginContainer" parent="AnalyzeDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="VBox" type="VBoxContainer" parent="AnalyzeDialog/MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 764.0
margin_bottom = 446.0

[node name="FileList" type="Tree" parent="AnalyzeDialog/MarginContainer/VBox"]
unique_name_in_owner = true
margin_right = 760.0
margin_bottom = 418.0
rect_clip_content = false
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
hide_root = true
select_mode = 2
__meta__ = {
"_editor_description_": ""
}

[node name="EmptyTip" type="Label" parent="AnalyzeDialog/MarginContainer/VBox/FileList"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -4.0
margin_top = -4.0
margin_right = -4.0
margin_bottom = -4.0
text = "Pick script files to be analyzed by clicking \"Add Files...\".
 They will give better context to the chat AI when asking questions."
align = 1
valign = 1
autowrap = true

[node name="HBox" type="HBoxContainer" parent="AnalyzeDialog/MarginContainer/VBox"]
margin_top = 422.0
margin_right = 760.0
margin_bottom = 442.0

[node name="AddFiles" type="Button" parent="AnalyzeDialog/MarginContainer/VBox/HBox"]
unique_name_in_owner = true
margin_right = 83.0
margin_bottom = 20.0
text = "Add Files..."

[node name="Space" type="Control" parent="AnalyzeDialog/MarginContainer/VBox/HBox"]
margin_left = 87.0
margin_right = 660.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Close" type="Button" parent="AnalyzeDialog/MarginContainer/VBox/HBox/Space"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -23.5
margin_top = -10.0
margin_right = 23.5
margin_bottom = 10.0
text = "Close"

[node name="AnalyzeFiles" type="Button" parent="AnalyzeDialog/MarginContainer/VBox/HBox"]
unique_name_in_owner = true
margin_left = 664.0
margin_right = 760.0
margin_bottom = 20.0
disabled = true
text = "Analyze Files"

[node name="FileDialog" type="FileDialog" parent="."]
margin_right = 315.0
margin_bottom = 130.0
rect_min_size = Vector2( 150, 52.5 )
window_title = "Open File(s)"
mode = 1
filters = PoolStringArray( "*.gd ; GDScript Files" )

[connection signal="pressed" from="Button" to="." method="_on_Analyze_pressed"]
[connection signal="button_pressed" from="AnalyzeDialog/MarginContainer/VBox/FileList" to="." method="_on_FileList_button_pressed"]
[connection signal="pressed" from="AnalyzeDialog/MarginContainer/VBox/HBox/AddFiles" to="." method="_on_AddFile_pressed"]
[connection signal="pressed" from="AnalyzeDialog/MarginContainer/VBox/HBox/Space/Close" to="AnalyzeDialog" method="hide"]
[connection signal="pressed" from="AnalyzeDialog/MarginContainer/VBox/HBox/AnalyzeFiles" to="." method="_on_AnalyzeFiles_pressed"]
[connection signal="files_selected" from="FileDialog" to="." method="_on_FileDialog_files_selected"]
